--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -176,7 +176,7 @@
           >
             <div
               class="flex items-center ps-2 m-1 rounded hover:bg-gray-800"
-              :class="{'bg-gray-800 border-2 border-gray-900': filepath.file_path === results.result.file_path}"
+              :class="{'bg-gray-800  border-gray-900': filepath.file_path === results.result.file_path}"
             >
               <input
                 type="radio"
