(fix) uniq tmp file name and show container name on the table head

--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -243,7 +243,7 @@
                   x-text="`(${formatBytes(filepath.file_size)})`"></span>
               </label>
               <span
-                class="text-gray-400 pr-2 text-right w-1/12"
+                class="text-gray-600 pr-2 text-sm text-right w-1/12"
                 x-text="`${numberToK(filepath.lines_count)}`"></span>
             </div>
           </li>
