--- a/frontend/src/components/Viewer.astro
+++ b/frontend/src/components/Viewer.astro
@@ -39,6 +39,7 @@ const baseURL = import.meta.env.PUBLIC_BASE_URL;
       match_pattern: "",
       total: 0,
       file_path: "",
+      date: "",
     },
     file_paths: [],
   });
@@ -60,6 +61,35 @@ const baseURL = import.meta.env.PUBLIC_BASE_URL;
   }
   function numberToK(number) {
     return number > 999 ? (number / 1000).toFixed(1) + "k" : number;
+  }
+  function timeago(str) {
+    if (!str) return "";
+    date = new Date(str);
+    if (isNaN(date)) return "";
+    const now = new Date();
+    const secondsPast = (now.getTime() - date.getTime()) / 1000;
+
+    if (secondsPast < 60) {
+        return `${Math.floor(secondsPast)} seconds ago`;
+    }
+    if (secondsPast < 3600) {
+        const minutes = Math.floor(secondsPast / 60);
+        return `${minutes} ${minutes === 1 ? 'minute' : 'minutes'} ago`;
+    }
+    if (secondsPast <= 86400) {
+        const hours = Math.floor(secondsPast / 3600);
+        return `${hours} ${hours === 1 ? 'hour' : 'hours'} ago`;
+    }
+    if (secondsPast <= 2592000) {
+        const days = Math.floor(secondsPast / 86400);
+        return `${days} ${days === 1 ? 'day' : 'days'} ago`;
+    }
+    if (secondsPast <= 31536000) {
+        const months = Math.floor(secondsPast / 2592000);
+        return `${months} ${months === 1 ? 'month' : 'months'} ago`;
+    }
+    const years = Math.floor(secondsPast / 31536000);
+    return `${years} ${years === 1 ? 'year' : 'years'} ago`;
   }
 
   const init = async () => {
@@ -126,6 +156,7 @@ const baseURL = import.meta.env.PUBLIC_BASE_URL;
     submit,
     formatBytes,
     numberToK,
+    timeago,
   };
   document.getElementById("data").setAttribute("x-data", JSON.stringify(data));
   Alpine.start();
