--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -164,7 +164,7 @@
             </div>
 
             <span
-              class="relative inline-flex items-center pl-5 pr-5 ms-5 px-0.5 py-0.5 text-sm font-medium text-center text-white border-gray-700 border-dotted border-t-2 border-b-2 border-r-2"
+              class="relative inline-flex items-center pl-5 pr-12 ms-5 px-0.5 py-0.5 text-sm font-medium text-center text-white border-gray-700 border-t-2 border-b-2 border-r-2"
             >
               <span
                 class="text-sm text-gray-200 uppercase font-bold"
